x/y/2014 ola-0.9.4
 Features:
 * Added support for hotplugging USB devices using the usbdmx plugin, #374.

 API:
 * 

 RDM Tests:
 * 

 Bugs:
 * 

 Internal:
 * 

16/11/2014 ola-0.9.3
 Features:
 * Send the E1.31 Stream Terminated message on shutdown and/or port unpatching.
 * Add support for the draft E1.31 discovery protocol.
 * Switch the dummy responder which implements the E1.37-2 PIDs to their final
   values.
 * Add the ability to whitelist rather than blacklist plugins during configure
   (via --disable-all-plugins) and switch the Windows build to this method.
 * Convert ola_trigger to our flags module; change it's default universe value
   to be 0 to align with other programs.
 * Make the ola_trigger config syntax more flexible, including dots in program
   names and quoted program names #507
 * Add an instance name to OLA server and use it within E1.31 and the DNS-SD
   code to make multiple instances of OLA easier to track.

 Bugs:
 * Fix some build issues on OS X 10.5.8
 * Fix some build issues on Windows XP
 * Use the correct ifdefs within plugin loading so we only load stuff if we
   asked for it
 * Fix the inability to Ctrl+C in ola_recorder

 API:
 * Update ola::network::IPV4Address and ola::network::IPV4SocketAddress so they
   sort the same regardless of endianness and in a logical way for humans.

 Internal:
 * Update the configure version method to ensure the version files are updated
   automatically when it changes.
 * Add a generic RpcServer class and switch OlaServer to use it.
 * SelectServer now runs any remaining pending callbacks during shutdown.

20/8/2014 ola-0.9.2
 Features:
 * Added --use-epoll which uses epoll() rather than select().
 * Added --use-kqueue which uses kqueue() rather than select().
 * Add some more additional slot definitions.
 * Allow the FTDI thread to switch from BAD to GOOD timing granularity.
 * Change the flags so the negated ones are --no-, this mostly affects --nohttp
   and --nohttp-quit in olad